Register PMS
