# k8s/superdentist-backend/templates/_openapi.yaml
@@ -120,6 +120,29 @@ paths:
           description: "Internal server error occured"
       security:
         - Bearer: []
+  /v1/clinic/registerClinicPMS:
+    post:
+      tags:
+        - "clinic"
+      summary: Add all PMS used by current clinic
+      description: Collect information on PMS used by current clinic
+      operationId: "RegisterClinicPMS"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Created clinic object"
+        required: true
+        schema:
+          $ref: "#/definitions/RegisterClinicPMS"
+      responses:
+        '200':
+          description: "PMS have registered for the clinic"
+        '401':
+          description: "Unauthorized: Bad request or authorization details"
+        '500':
+          description: "Internal server error occured"
+      security:
+        - Bearer: []
 securityDefinitions:
   Bearer:
     type: "apiKey"
@@ -127,6 +150,15 @@ securityDefinitions:
     in: "header"
 
 definitions:
+  RegisterClinicPMS:
+    type: object
+    properties:
+      clinicId:
+        type: string
+      pmsNames:
+        type:  array
+        items:
+          type: string
   ClinicRegistrationData:
     type: "object"
     properties:
@@ -229,4 +261,5 @@ responses:
     description: Returns successful completion of clinic address registration
     schema:
       $ref: '#/definitions/ClinicAddressResponse'
+  
 {{ end }}
